POWR-429: Generate get directions link for service locations

--- a/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
@@ -5,14 +5,12 @@ dependencies:
   config:
     - field.field.node.service_location.field_building
     - field.field.node.service_location.field_floor
-    - field.field.node.service_location.field_get_directions
     - field.field.node.service_location.field_legacy_path
     - field.field.node.service_location.field_open_hours
     - field.field.node.service_location.field_summary
     - node.type.service_location
   module:
     - ds
-    - link
     - panelizer
     - user
 third_party_settings:
@@ -34,7 +32,7 @@ third_party_settings:
         - field_building
         - field_floor
         - field_open_hours
-        - field_get_directions
+        - service_location_directions_link_entity_view_1
 id: node.service_location.default
 targetEntityType: node
 bundle: service_location
@@ -56,25 +54,6 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
-    region: content
-  field_get_directions:
-    weight: 4
-    label: hidden
-    settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: '0'
-      target: '0'
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-    type: link
     region: content
   field_open_hours:
     weight: 3
@@ -120,6 +99,11 @@ content:
             fi-def-at: false
     type: string
     region: content
+  service_location_directions_link_entity_view_1:
+    weight: 4
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   field_legacy_path: true
