--- a/web/sites/default/config/core.entity_view_display.node.service_location.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.search_result.yml
@@ -6,7 +6,6 @@ dependencies:
     - core.entity_view_mode.node.search_result
     - field.field.node.service_location.field_building
     - field.field.node.service_location.field_floor
-    - field.field.node.service_location.field_get_directions
     - field.field.node.service_location.field_legacy_path
     - field.field.node.service_location.field_open_hours
     - field.field.node.service_location.field_summary
@@ -94,11 +93,15 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  service_location_directions_link_entity_view_1:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    region: content
 hidden:
   content_moderation_control: true
   field_building: true
   field_floor: true
-  field_get_directions: true
   field_legacy_path: true
   field_open_hours: true
   links: true
