--- a/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
@@ -6,11 +6,12 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.service_location.field_building
     - field.field.node.service_location.field_floor
-    - field.field.node.service_location.field_get_directions
+    - field.field.node.service_location.field_legacy_path
     - field.field.node.service_location.field_open_hours
+    - field.field.node.service_location.field_summary
     - node.type.service_location
   module:
-    - link
+    - ds
     - panelizer
     - user
 third_party_settings:
@@ -19,6 +20,29 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        classes: {  }
+        wrappers:
+          content: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+    regions:
+      content:
+        - field_building
+        - field_legacy_path
+        - field_summary
+        - field_floor
+        - field_open_hours
+        - service_location_directions_link_entity_view_1
+        - field_get_directions
 id: node.service_location.teaser
 targetEntityType: node
 bundle: service_location
@@ -41,18 +65,6 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-  field_get_directions:
-    type: link
-    weight: 3
-    region: content
-    label: hidden
-    settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
   field_open_hours:
     type: string
     weight: 2
@@ -61,7 +73,14 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
+  service_location_directions_link_entity_view_1:
+    weight: 3
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   content_moderation_control: true
+  field_legacy_path: true
+  field_summary: true
   links: true
   scheduled_publication: true
