--- a/web/sites/default/config/core.entity_view_display.paragraph.service_location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.service_location.default.yml
@@ -7,6 +7,24 @@ dependencies:
     - paragraphs.paragraphs_type.service_location
   module:
     - ds
+third_party_settings:
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        classes: {  }
+        wrappers:
+          content: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+    regions:
+      content:
+        - field_service_location
 id: paragraph.service_location.default
 targetEntityType: paragraph
 bundle: service_location
