--- a/web/sites/default/config/extlink.settings.yml
+++ b/web/sites/default/config/extlink.settings.yml
@@ -10,7 +10,7 @@ extlink_include: ''
 extlink_class: ext
 extlink_label: '(link is external)'
 extlink_img_class: false
-extlink_css_exclude: ''
+extlink_css_exclude: '#toolbar-administration'
 extlink_css_explicit: ''
 extlink_mailto_class: '0'
 extlink_mailto_label: '(link sends email)'
