POWR-491 Update gulpfile and tasks

--- a/web/themes/custom/cloudy/package.json
+++ b/web/themes/custom/cloudy/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "gulp"
+        "start": "gulp",
+        "serve": "gulp serve"
     },
     "keywords": [
         "SASS",
@@ -17,14 +18,17 @@
     "license": "MIT",
     "dependencies": {},
     "devDependencies": {
-        "gulp": "~3.9.1",
-        "gulp-autoprefixer": "~4.0.0",
-        "gulp-concat": "^2.6.1",
-        "gulp-sass": "~3.1.0",
+        "autoprefixer": "^9.3.0",
         "bootstrap": "^4.0.0",
+        "browser-sync": "~2.18.13",
+        "gulp": "~3.9.1",
+        "gulp-concat": "^2.6.1",
         "gulp-minify-css": "~1.2.4",
+        "gulp-postcss": "^8.0.0",
+        "gulp-sass": "~3.1.0",
         "gulp-sourcemaps": "^2.6.0",
         "gulp-uglify": "~3.0.0",
-        "browser-sync": "~2.18.13"
+        "postcss-custom-properties": "^8.0.8",
+        "run-sequence": "^2.2.1"
     }
 }
