POWR-493 Only show published services in site service list.

--- a/web/sites/default/config/search_api.index.services.yml
+++ b/web/sites/default/config/search_api.index.services.yml
@@ -10,9 +10,9 @@ dependencies:
     - core.entity_view_mode.node.search_result
   module:
     - taxonomy
+    - node
     - search_api
     - portland
-    - node
 id: services
 name: Services
 description: 'Index of the service content type.'
@@ -28,6 +28,7 @@ field_settings:
         - field.storage.node.field_community_actions
       module:
         - taxonomy
+        - taxonomy
   name_audience:
     label: 'Audience » Taxonomy term » Name'
     datasource_id: 'entity:node'
@@ -37,6 +38,7 @@ field_settings:
       config:
         - field.storage.node.field_audience
       module:
+        - taxonomy
         - taxonomy
   name_topics:
     label: 'Topics » Taxonomy term » Name'
@@ -48,6 +50,7 @@ field_settings:
         - field.storage.node.field_topics
       module:
         - taxonomy
+        - taxonomy
   rendered_item:
     label: 'Rendered HTML output'
     property_path: rendered_item
@@ -58,11 +61,22 @@ field_settings:
       view_mode:
         'entity:node':
           city_service: search_result
+  status:
+    label: Published
+    datasource_id: 'entity:node'
+    property_path: status
+    type: boolean
+    dependencies:
+      module:
+        - node
   title:
     label: Title
     datasource_id: 'entity:node'
     property_path: title
     type: string
+    dependencies:
+      module:
+        - node
 datasource_settings:
   'entity:node':
     bundles:
