--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -198,6 +198,42 @@ display:
           fields:
             - rendered_item
           plugin_id: search_api_fulltext
+        status:
+          id: status
+          table: search_api_index_services
+          field: status
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: search_api_boolean
       sorts:
         title:
           id: title
