POWR-486 Restore categories on a node feature lost from POWR-347

--- a/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
@@ -1,36 +1,39 @@
-uuid: 1a2cd325-c61d-4225-80b8-0396535357e5
+uuid: 301466cf-8917-48e4-bfc4-1aa90487b18c
 langcode: en
 status: true
 dependencies:
   config:
     - views.view.categories_on_a_node
   module:
-    - ctools
+    - node
     - views
   theme:
     - cloudy
-id: cloudy_views_block__categories_on_a_node_block
+id: views_block__categories_on_a_node_block_1
 theme: cloudy
 region: sidebar_second
-weight: -6
+weight: 0
 provider: null
 plugin: 'views_block:categories_on_a_node-block_1'
 settings:
   id: 'views_block:categories_on_a_node-block_1'
-  label: ''
+  label: Categories
   provider: views
   label_display: visible
-  views_label: ''
+  views_label: Categories
   items_per_page: none
   context_mapping: {  }
 visibility:
-  'entity_bundle:node':
-    id: 'entity_bundle:node'
+  node_type:
+    id: node_type
     bundles:
       city_service: city_service
       guide: guide
+      alert: alert
+      event: event
       information: information
       news: news
+      notification: notification
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
