POWR-480 Style group menus and remove media group menu

--- a/web/sites/default/config/block.block.cloudy_views_block__group_menu_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__group_menu_block_1.yml
@@ -11,15 +11,15 @@ dependencies:
     - cloudy
 id: cloudy_views_block__group_menu_block_1
 theme: cloudy
-region: sidebar_second
-weight: -15
+region: content
+weight: -13
 provider: null
 plugin: 'views_block:group_menu-block_1'
 settings:
   id: 'views_block:group_menu-block_1'
   label: ''
   provider: views
-  label_display: visible
+  label_display: '0'
   views_label: ''
   items_per_page: none
   context_mapping: {  }
@@ -27,10 +27,10 @@ visibility:
   group_type:
     id: group_type
     group_types:
-      project: project
       bureau_office: bureau_office
       elected_official: elected_official
       program: program
+      project: project
     negate: false
     context_mapping:
       group: '@group.group_route_context:group'
