--- a/web/sites/default/config/views.view.group_menu.yml
+++ b/web/sites/default/config/views.view.group_menu.yml
@@ -56,20 +56,19 @@ display:
         type: html_list
         options:
           grouping: {  }
-          row_class: ''
+          row_class: nav-item
           default_row_class: false
           type: ul
-          wrapper_class: item-list
-          class: ''
+          wrapper_class: ''
+          class: 'nav nav-group'
       row:
         type: fields
         options:
           default_field_elements: false
           inline:
-            nid: nid
             type: type
           separator: ' '
-          hide_empty: false
+          hide_empty: true
       fields:
         field_shortname_or_acronym:
           id: field_shortname_or_acronym
@@ -133,77 +132,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          plugin_id: field
-        nid:
-          id: nid
-          table: node_field_data
-          field: nid
-          relationship: gc__node
-          group_type: count_distinct
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: false
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          set_precision: false
-          precision: 0
-          decimal: .
-          separator: ', '
-          format_plural: 0
-          format_plural_string: !!binary MQNAY291bnQ=
-          prefix: ''
-          suffix: ''
-          click_sort_column: value
-          type: number_integer
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          field_api_classes: false
-          entity_type: node
-          entity_field: nid
           plugin_id: field
         type:
           id: type
@@ -405,79 +333,6 @@ display:
           entity_type: media
           entity_field: bundle
           plugin_id: field
-        mid:
-          id: mid
-          table: media_field_data
-          field: mid
-          relationship: gc__media
-          group_type: count_distinct
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: number_integer
-          settings:
-            thousand_separator: ''
-            prefix_suffix: true
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          set_precision: false
-          precision: 0
-          decimal: .
-          format_plural: 0
-          format_plural_string: !!binary MQNAY291bnQ=
-          prefix: ''
-          suffix: ''
-          entity_type: media
-          entity_field: mid
-          plugin_id: field
         nothing:
           id: nothing
           table: views
@@ -489,7 +344,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "{% if bundle == \"Documents\" %}\n<a href=\"/{{ field_shortname_or_acronym|lower }}/{{ bundle|lower }}\" class=\"d-flex justify-content-between align-items-center\">{{ bundle }}<span class=\"badge badge-primary badge-pill\">{{ mid }}</span></a>\n{% else %}\n<a href=\"/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}\" class=\"d-flex justify-content-between align-items-center\">{{ type }}<span class=\"badge badge-primary badge-pill\">{{ nid }}</span></a>\n{% endif %}"
+            text: "{% if bundle == \"Documents\" %}\r\n<a href=\"/{{ field_shortname_or_acronym|lower }}/{{ bundle|lower }}\" class=\"nav-link\">{{ bundle }}<span class=\"badge badge-primary badge-pill\">{{ mid }}</span></a>\r\n{% else %}\r\n<a href=\"/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}\" class=\"nav-link\">{{ type }}<span class=\"badge badge-primary badge-pill\">{{ nid }}</span></a>\r\n{% endif %}"
             make_link: false
             path: ''
             absolute: false
@@ -521,7 +376,7 @@ display:
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
