POWR-493 Only show published services.

--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -255,12 +255,8 @@ display:
         context: '0'
         menu_name: main
       cache:
-        type: search_api_time
-        options:
-          results_lifespan: 3600
-          results_lifespan_custom: 0
-          output_lifespan: 3600
-          output_lifespan_custom: 0
+        type: search_api_tag
+        options: {  }
       defaults:
         cache: false
       exposed_block: false
