--- a/web/sites/default/config/search_api.index.services.yml
+++ b/web/sites/default/config/search_api.index.services.yml
@@ -3,16 +3,16 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_audience
     - field.storage.node.field_community_actions
+    - field.storage.node.field_audience
     - field.storage.node.field_topics
     - search_api.server.database
     - core.entity_view_mode.node.search_result
   module:
     - taxonomy
+    - node
     - search_api
     - portland
-    - node
 id: services
 name: Services
 description: 'Index of the service content type.'
@@ -28,6 +28,7 @@ field_settings:
         - field.storage.node.field_community_actions
       module:
         - taxonomy
+        - taxonomy
   name_audience:
     label: 'Audience » Taxonomy term » Name'
     datasource_id: 'entity:node'
@@ -38,6 +39,7 @@ field_settings:
         - field.storage.node.field_audience
       module:
         - taxonomy
+        - taxonomy
   name_topics:
     label: 'Topics » Taxonomy term » Name'
     datasource_id: 'entity:node'
@@ -47,6 +49,7 @@ field_settings:
       config:
         - field.storage.node.field_topics
       module:
+        - taxonomy
         - taxonomy
   rendered_item:
     label: 'Rendered HTML output'
@@ -63,6 +66,9 @@ field_settings:
     datasource_id: 'entity:node'
     property_path: title
     type: string
+    dependencies:
+      module:
+        - node
 datasource_settings:
   'entity:node':
     bundles:
@@ -75,6 +81,7 @@ datasource_settings:
 processor_settings:
   add_url: {  }
   aggregated_field: {  }
+  entity_status: {  }
   ignorecase:
     all_fields: true
     fields:
