--- a/web/sites/default/config/search_api.index.services.yml
+++ b/web/sites/default/config/search_api.index.services.yml
@@ -3,8 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_community_actions
     - field.storage.node.field_audience
+    - field.storage.node.field_community_actions
     - field.storage.node.field_topics
     - search_api.server.database
     - core.entity_view_mode.node.search_result
@@ -61,6 +61,14 @@ field_settings:
       view_mode:
         'entity:node':
           city_service: search_result
+  status:
+    label: Published
+    datasource_id: 'entity:node'
+    property_path: status
+    type: boolean
+    dependencies:
+      module:
+        - node
   title:
     label: Title
     datasource_id: 'entity:node'
@@ -81,7 +89,6 @@ datasource_settings:
 processor_settings:
   add_url: {  }
   aggregated_field: {  }
-  entity_status: {  }
   ignorecase:
     all_fields: true
     fields:
