--- a/web/sites/default/config/field.field.paragraph.video.field_video.yml
+++ b/web/sites/default/config/field.field.paragraph.video.field_video.yml
@@ -18,7 +18,7 @@ entity_type: paragraph
 bundle: video
 label: Video
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
