--- a/web/sites/default/config/field.field.paragraph.image.field_image.yml
+++ b/web/sites/default/config/field.field.paragraph.image.field_image.yml
@@ -18,7 +18,7 @@ entity_type: paragraph
 bundle: image
 label: Image
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
