--- a/web/sites/default/config/field.storage.paragraph.field_video.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_video.yml
@@ -3,8 +3,12 @@ langcode: en
 status: true
 dependencies:
   module:
+    - field_permissions
     - media
     - paragraphs
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: paragraph.field_video
 field_name: field_video
 entity_type: paragraph
