POWR-485 reopen and fix document requirement on media type

--- a/web/sites/default/config/field.storage.media.field_document.yml
+++ b/web/sites/default/config/field.storage.media.field_document.yml
@@ -3,8 +3,12 @@ langcode: en
 status: true
 dependencies:
   module:
+    - field_permissions
     - file
     - media
+third_party_settings:
+  field_permissions:
+    permission_type: public
 _core:
   default_config_hash: 7d2obsn0izmrU7_CzwY9X01wXbtBk9pMpB_OvHZJv3E
 id: media.field_document
