--- a/web/sites/default/config/field.field.paragraph.audio.field_video.yml
+++ b/web/sites/default/config/field.field.paragraph.audio.field_video.yml
@@ -18,7 +18,7 @@ entity_type: paragraph
 bundle: audio
 label: Audio
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
