--- a/web/sites/default/config/field.field.paragraph.document.field_document.yml
+++ b/web/sites/default/config/field.field.paragraph.document.field_document.yml
@@ -18,7 +18,7 @@ entity_type: paragraph
 bundle: document
 label: Document
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
