POWR-550 try to get just my location changes into a commit

--- a/web/sites/default/config/core.entity_view_display.node.building.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.building.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.building.field_address
+    - field.field.node.building.field_legacy_path
     - node.type.building
   module:
     - address
@@ -26,57 +27,7 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - 'bundle_field:node'
-        - node_title
         - field_address
-    fields:
-      node_title:
-        plugin_id: node_title
-        weight: 1
-        label: hidden
-        formatter: default
-        settings:
-          link: true
-          wrapper: h2
-          class: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-      'bundle_field:node':
-        plugin_id: 'bundle_field:node'
-        weight: 0
-        label: hidden
-        formatter: default
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow: true
-            ow-el: ''
-            ow-cl: 'text-muted align-right'
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
 id: node.building.teaser
 targetEntityType: node
 bundle: building
@@ -84,7 +35,7 @@ mode: teaser
 content:
   field_address:
     type: address_default
-    weight: 2
+    weight: 0
     region: content
     label: hidden
     settings: {  }
