--- a/web/sites/default/config/core.entity_view_display.paragraph.service_location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.service_location.default.yml
@@ -14,14 +14,7 @@ third_party_settings:
       library: layout_discovery/onecol
       disable_css: false
       entity_classes: all_classes
-      settings:
-        classes: {  }
-        wrappers:
-          content: div
-        outer_wrapper: div
-        attributes: ''
-        link_attribute: ''
-        link_custom: ''
+      settings: {  }
     regions:
       content:
         - field_service_location
