POWR-543 add review state and make it possible to assign service to reviewer

--- a/web/sites/default/config/views.view.content.yml
+++ b/web/sites/default/config/views.view.content.yml
@@ -171,6 +171,7 @@ display:
           include_exclude: include
           selected_actions:
             - archive_content
+            - mark_for_review
             - node_delete_action
             - publish_content
           entity_type: node
