--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.city_service.field_community_actions
     - field.field.node.city_service.field_legacy_path
     - field.field.node.city_service.field_related_content
+    - field.field.node.city_service.field_reviewer
     - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_summary
     - field.field.node.city_service.field_time_to_complete
@@ -50,6 +51,15 @@ content:
     region: content
   field_related_content:
     weight: 7
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_reviewer:
+    weight: 27
     settings:
       match_operator: CONTAINS
       size: 60
