--- a/web/sites/default/config/page_manager.page.moderation_dashboard.yml
+++ b/web/sites/default/config/page_manager.page.moderation_dashboard.yml
@@ -12,7 +12,7 @@ _core:
 id: moderation_dashboard
 label: 'Moderation Dashboard'
 description: ''
-use_admin_theme: false
+use_admin_theme: true
 path: '/user/{user}/moderation/dashboard'
 access_logic: and
 access_conditions:
