--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -48,6 +48,7 @@ permissions:
   - 'schedule editorial transition create_new_draft'
   - 'schedule editorial transition publish'
   - 'update any media'
+  - 'use moderation dashboard'
   - 'view alert revisions'
   - 'view all media revisions'
   - 'view all revisions'
