--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.city_service.field_community_actions
     - field.field.node.city_service.field_legacy_path
     - field.field.node.city_service.field_related_content
+    - field.field.node.city_service.field_reviewer
     - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_summary
     - field.field.node.city_service.field_time_to_complete
@@ -46,6 +47,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_reviewer:
+    weight: 4
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_service_mode:
     type: entity_reference_revisions_entity_view
     weight: 3
