--- a/web/sites/default/config/field.storage.node.field_reviewer.yml
+++ b/web/sites/default/config/field.storage.node.field_reviewer.yml
@@ -1,22 +1,23 @@
-uuid: 060ffede-6331-433b-b9bd-757bc5cb302a
+uuid: eafa080f-a9f4-44c7-96b9-a692945c9104
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
     - node
+    - user
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_related_content
-field_name: field_related_content
+id: node.field_reviewer
+field_name: field_reviewer
 entity_type: node
 type: entity_reference
 settings:
-  target_type: node
+  target_type: user
 module: core
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
