--- a/web/sites/default/config/media.type.audio.yml
+++ b/web/sites/default/config/media.type.audio.yml
@@ -13,7 +13,7 @@ label: Audio
 description: 'An audio file hosted by YouTube.'
 source: video_embed_field
 queue_thumbnail_downloads: false
-new_revision: false
+new_revision: true
 source_configuration:
   source_field: field_media_video_embed_field
 field_map: {  }
