--- a/web/sites/default/config/media.type.document.yml
+++ b/web/sites/default/config/media.type.document.yml
@@ -14,9 +14,10 @@ label: Document
 description: 'A locally hosted document, such a PDF.'
 source: file
 queue_thumbnail_downloads: false
-new_revision: false
+new_revision: true
 source_configuration:
   source_field: field_document
 field_map:
+  name: name
   mimetype: field_document
   filesize: field_document
