--- a/web/sites/default/config/media.type.image.yml
+++ b/web/sites/default/config/media.type.image.yml
@@ -1,7 +1,12 @@
 uuid: dbdf8258-f482-4355-a844-e55ba4e5c6c3
 langcode: und
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - crop
+third_party_settings:
+  crop:
+    image_field: _none
 _core:
   default_config_hash: UbLy1_yBV5jSxil0-k8gV9GiVUg3Oik3hlAJzqeT8YQ
 id: image
@@ -9,7 +14,7 @@ label: Image
 description: 'Locally hosted images.'
 source: image
 queue_thumbnail_downloads: false
-new_revision: false
+new_revision: true
 source_configuration:
   source_field: image
 field_map: {  }
