--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -2,6 +2,8 @@ uuid: 3d09c810-2ff1-4d99-a23a-177ed4304165
 langcode: en
 status: true
 dependencies:
+  config:
+    - field.storage.node.field_reviewer
   module:
     - content_moderation
     - gnode
@@ -86,6 +88,7 @@ display:
             node_bulk_form: node_bulk_form
             title: title
             moderation_state: moderation_state
+            field_reviewer: field_reviewer
             type: type
             created: created
             changed: changed
@@ -106,7 +109,14 @@ display:
               empty_column: false
               responsive: ''
             moderation_state:
-              sortable: false
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_reviewer:
+              sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
@@ -216,6 +226,7 @@ display:
           include_exclude: include
           selected_actions:
             - archive_content
+            - mark_for_review
             - publish_content
           entity_type: node
           plugin_id: node_bulk_form
@@ -346,6 +357,69 @@ display:
           separator: ', '
           field_api_classes: false
           entity_type: node
+          plugin_id: field
+        field_reviewer:
+          id: field_reviewer
+          table: node__field_reviewer
+          field: field_reviewer
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Reviewer
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_label
+          settings:
+            link: true
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
           plugin_id: field
         type:
           id: type
@@ -845,8 +919,60 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+        uid_1:
+          id: uid_1
+          table: users_field_data
+          field: uid
+          relationship: field_reviewer
+          group_type: group
+          admin_label: ''
+          operator: in
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: uid_1_op
+            label: Reviewer
+            description: ''
+            use_operator: false
+            operator: uid_1_op
+            identifier: uid_1
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: user
+          entity_field: uid
+          plugin_id: user_name
       sorts: {  }
-      header: {  }
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          content: '@total results found'
+          plugin_id: result
       footer: {  }
       empty:
         area_text_custom:
@@ -873,6 +999,15 @@ display:
             'group_node:city_service': '0'
           entity_type: node
           plugin_id: group_content_to_entity_reverse
+        field_reviewer:
+          id: field_reviewer
+          table: node__field_reviewer
+          field: field_reviewer
+          relationship: none
+          group_type: group
+          admin_label: 'field_reviewer: User'
+          required: false
+          plugin_id: standard
       arguments:
         gid:
           id: gid
@@ -926,7 +1061,8 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_reviewer'
   page_1:
     display_plugin: page
     id: page_1
@@ -954,4 +1090,5 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_reviewer'
