POWR-316 Update taxonomy page

--- a/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-0.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - page_manager.page.taxonomy_term_page
+    - views.view.content_by_taxonomy
     - views.view.groups_by_topic
     - views.view.services_by_topic
     - views.view.services_by_topic_without_action
@@ -23,7 +24,7 @@ variant_settings:
       label_display: visible
       views_label: ''
       items_per_page: none
-      region: content
+      region: first
       weight: 2
       uuid: 79c44e9c-966f-4ff4-8843-5dd407698ee0
       context_mapping: {  }
@@ -34,7 +35,7 @@ variant_settings:
       label_display: visible
       views_label: ''
       items_per_page: none
-      region: content
+      region: first
       weight: 0
       uuid: f6176976-2383-47bd-8a19-da35dc1d613e
       context_mapping: {  }
@@ -45,7 +46,7 @@ variant_settings:
       label_display: visible
       views_label: ''
       items_per_page: none
-      region: content
+      region: first
       weight: 1
       uuid: 2fff8504-5649-4b36-9bda-2f3d730be700
       context_mapping: {  }
@@ -55,16 +56,27 @@ variant_settings:
       provider: ctools
       label_display: '0'
       view_mode: default
-      region: content
+      region: first
       weight: 0
       uuid: 06bc7bad-b281-404d-b7b1-a682216fb40b
       context_mapping:
         entity: taxonomy_term
+    cfbf9e60-51ec-42c9-aac8-9fc53d1210f7:
+      id: 'views_block:content_by_taxonomy-block_by_audience'
+      label: ''
+      provider: views
+      label_display: visible
+      views_label: ''
+      items_per_page: none
+      region: second
+      weight: 0
+      uuid: cfbf9e60-51ec-42c9-aac8-9fc53d1210f7
+      context_mapping: {  }
   id: panels_variant
   uuid: 3cf0a205-d6ab-4233-ab72-a1166dbe4ff0
   label: null
   weight: 0
-  layout: layout_onecol
+  layout: layout_twocol
   layout_settings: {  }
   page_title: '[term:name]'
   storage_type: page_manager
