POWR-543 fixed issue where latest revision reviewer did not register.

--- a/web/sites/default/config/views.view.moderated_content.yml
+++ b/web/sites/default/config/views.view.moderated_content.yml
@@ -2,6 +2,8 @@ uuid: 187726a0-c8af-4232-ab5a-9fd20e6babfd
 langcode: en
 status: true
 dependencies:
+  config:
+    - field.storage.node.field_reviewer
   module:
     - content_moderation
     - node
@@ -456,6 +458,69 @@ display:
           entity_type: node
           entity_field: revision_uid
           plugin_id: field
+        field_reviewer:
+          id: field_reviewer
+          table: node__field_reviewer
+          field: field_reviewer
+          relationship: nid
+          group_type: group
+          admin_label: ''
+          label: Reviewer
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_label
+          settings:
+            link: true
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         revision_log:
           id: revision_log
           table: node_revision
@@ -814,7 +879,17 @@ display:
           plugin_id: moderation_state_filter
       sorts: {  }
       title: 'Moderated Content'
-      header: {  }
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: '@total items'
+          plugin_id: result
       footer: {  }
       empty: {  }
       relationships:
@@ -828,6 +903,15 @@ display:
           required: false
           entity_type: node
           entity_field: nid
+          plugin_id: standard
+        field_reviewer:
+          id: field_reviewer
+          table: node_revision__field_reviewer
+          field: field_reviewer
+          relationship: none
+          group_type: group
+          admin_label: 'field_reviewer: User'
+          required: false
           plugin_id: standard
       arguments: {  }
       display_extenders: {  }
@@ -845,6 +929,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_reviewer'
         - 'config:workflow_list'
   page_1:
     display_plugin: page
@@ -864,4 +949,5 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_reviewer'
         - 'config:workflow_list'
