--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -82,6 +82,7 @@ type_settings:
       from:
         - archived
         - draft
+        - published
         - review
       to: review
       weight: -2
