--- a/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
@@ -26,30 +26,23 @@ third_party_settings:
       library: layout_discovery/onecol
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        classes: {  }
+        wrappers:
+          content: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
     regions:
       content:
-        - node_title
         - field_building
+        - field_legacy_path
+        - field_summary
         - field_floor
         - field_open_hours
         - service_location_directions_link_entity_view_1
-    fields:
-      node_title:
-        plugin_id: node_title
-        weight: 0
-        label: hidden
-        formatter: default
-        settings:
-          wrapper: h4
-          class: ''
-          link: false
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
+        - field_get_directions
 id: node.service_location.teaser
 targetEntityType: node
 bundle: service_location
@@ -57,73 +50,31 @@ mode: teaser
 content:
   field_building:
     type: entity_reference_entity_view
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      view_mode: address
+      link: false
+    third_party_settings: {  }
+  field_floor:
+    type: string
     weight: 1
     region: content
     label: hidden
     settings:
-      view_mode: teaser
-      link: false
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-  field_floor:
+      link_to_entity: false
+    third_party_settings: {  }
+  field_open_hours:
     type: string
     weight: 2
     region: content
     label: hidden
     settings:
       link_to_entity: false
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-  field_open_hours:
-    type: string
-    weight: 3
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
+    third_party_settings: {  }
   service_location_directions_link_entity_view_1:
-    weight: 4
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
