--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -47,14 +47,6 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_reviewer:
-    weight: 4
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_service_mode:
     type: entity_reference_revisions_entity_view
     weight: 3
@@ -113,6 +105,7 @@ hidden:
   field_community_actions: true
   field_legacy_path: true
   field_related_content: true
+  field_reviewer: true
   field_topics: true
   links: true
   scheduled_publication: true
