--- a/web/sites/default/config/views.view.user_assigned_to_review.yml
+++ b/web/sites/default/config/views.view.user_assigned_to_review.yml
@@ -50,23 +50,9 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: none
         options:
-          items_per_page: 10
           offset: 0
-          id: 0
-          total_pages: null
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          tags:
-            previous: ‹‹
-            next: ››
       style:
         type: table
         options:
@@ -472,7 +458,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: true
+          element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -485,6 +471,71 @@ display:
           absolute: false
           entity_type: node
           plugin_id: entity_link_edit
+        name:
+          id: name
+          table: users_field_data
+          field: name
+          relationship: field_reviewer
+          group_type: group
+          admin_label: ''
+          label: Reviewer
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: user_name
+          settings:
+            link_to_entity: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: user
+          entity_field: name
+          plugin_id: field
       filters:
         moderation_state:
           id: moderation_state
@@ -565,9 +616,9 @@ display:
       sorts:
         changed:
           id: changed
-          table: node_field_data
+          table: node_field_revision
           field: changed
-          relationship: nid
+          relationship: none
           group_type: group
           admin_label: ''
           order: ASC
@@ -605,29 +656,19 @@ display:
           plugin_id: standard
         field_reviewer:
           id: field_reviewer
-          table: node__field_reviewer
+          table: node_revision__field_reviewer
           field: field_reviewer
-          relationship: nid
+          relationship: none
           group_type: group
           admin_label: 'field_reviewer: User'
           required: true
           plugin_id: standard
-        reverse__node__field_reviewer:
-          id: reverse__node__field_reviewer
-          table: users_field_data
-          field: reverse__node__field_reviewer
-          relationship: field_reviewer
-          group_type: group
-          admin_label: field_reviewer
-          required: true
-          entity_type: user
-          plugin_id: entity_reverse
       arguments:
-        field_reviewer_target_id:
-          id: field_reviewer_target_id
-          table: node__field_reviewer
-          field: field_reviewer_target_id
-          relationship: nid
+        uid:
+          id: uid
+          table: users_field_data
+          field: uid
+          relationship: field_reviewer
           group_type: group
           admin_label: ''
           default_action: default
@@ -657,16 +698,21 @@ display:
           validate_options: {  }
           break_phrase: false
           not: false
-          plugin_id: numeric
+          entity_type: user
+          entity_field: uid
+          plugin_id: user_uid
       display_extenders: {  }
       group_by: false
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
@@ -687,7 +733,6 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
