POWR-524 - extended Moderated Content view to include data export

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -29,6 +29,7 @@ module:
   contextual: 0
   copyright_block: 0
   crop: 0
+  csv_serialization: 0
   ctools: 0
   ctools_block: 0
   custom_add_another: 0
@@ -123,6 +124,7 @@ module:
   redirect: 0
   redirect_404: 0
   responsive_image: 0
+  rest: 0
   rh_node: 0
   schemata: 0
   schemata_json_schema: 0
@@ -150,6 +152,7 @@ module:
   video_embed_field: 0
   video_embed_media: 0
   views_bulk_operations: 0
+  views_data_export: 0
   views_infinite_scroll: 0
   views_ui: 0
   viewsreference: 0
