POWR-480 Update config to hide group title field and add bottom margin, bold links to group menu

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -29,7 +29,6 @@ third_party_settings:
     regions:
       content:
         - field_parent_group
-        - label
         - field_summary
 id: group.bureau_office.default
 targetEntityType: group
@@ -53,7 +52,7 @@ content:
     region: content
   field_summary:
     type: string
-    weight: 2
+    weight: 1
     region: content
     label: hidden
     settings:
@@ -87,14 +86,6 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
-  label:
-    label: hidden
-    type: string
-    weight: 1
-    region: content
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
 hidden:
   changed: true
   created: true
@@ -108,4 +99,5 @@ hidden:
   field_phone: true
   field_shortname_or_acronym: true
   field_topics: true
+  label: true
   uid: true
