--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -28,7 +28,6 @@ third_party_settings:
     regions:
       content:
         - field_parent_group
-        - label
         - field_summary
 id: group.program.default
 targetEntityType: group
@@ -51,7 +50,7 @@ content:
     type: entity_reference_label
     region: content
   field_summary:
-    weight: 2
+    weight: 1
     settings:
       link_to_entity: false
     third_party_settings:
@@ -86,14 +85,6 @@ content:
     region: content
     type: string
     label: hidden
-  label:
-    label: hidden
-    type: string
-    weight: 1
-    region: content
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
 hidden:
   changed: true
   created: true
@@ -106,4 +97,5 @@ hidden:
   field_phone: true
   field_shortname_or_acronym: true
   field_topics: true
+  label: true
   uid: true
