--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -25,7 +25,6 @@ third_party_settings:
     regions:
       content:
         - field_parent_group
-        - label
         - field_summary
         - field_date_time_range
 id: group.project.default
@@ -35,7 +34,7 @@ mode: default
 content:
   field_date_time_range:
     type: daterange_default
-    weight: 3
+    weight: 2
     region: content
     label: above
     settings:
@@ -66,7 +65,7 @@ content:
     type: entity_reference_label
     region: content
   field_summary:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -101,14 +100,6 @@ content:
             fi-def-at: false
     type: string
     region: content
-  label:
-    label: hidden
-    type: string
-    weight: 1
-    region: content
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
 hidden:
   changed: true
   created: true
@@ -116,4 +107,5 @@ hidden:
   field_legacy_path: true
   field_shortname_or_acronym: true
   field_topics: true
+  label: true
   uid: true
