--- a/web/sites/default/config/views.view.group_menu.yml
+++ b/web/sites/default/config/views.view.group_menu.yml
@@ -60,7 +60,7 @@ display:
           default_row_class: false
           type: ul
           wrapper_class: ''
-          class: 'nav nav-group'
+          class: 'nav nav-group mb-3'
       row:
         type: fields
         options:
@@ -344,7 +344,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "{% if bundle == \"Documents\" %}\r\n<a href=\"/{{ field_shortname_or_acronym|lower }}/{{ bundle|lower }}\" class=\"nav-link\">{{ bundle }}<span class=\"badge badge-primary badge-pill\">{{ mid }}</span></a>\r\n{% else %}\r\n<a href=\"/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}\" class=\"nav-link\">{{ type }}<span class=\"badge badge-primary badge-pill\">{{ nid }}</span></a>\r\n{% endif %}"
+            text: "{% if bundle == \"Documents\" %}\r\n<a href=\"/{{ field_shortname_or_acronym|lower }}/{{ bundle|lower }}\" class=\"nav-link\">{{ bundle }}</a>\r\n{% else %}\r\n<a href=\"/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}\" class=\"nav-link\">{{ type }}</a>\r\n{% endif %}"
             make_link: false
             path: ''
             absolute: false
