--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -14,13 +14,15 @@ dependencies:
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - group.type.elected_official
+  module:
+    - ds
 id: group.elected_official.default
 targetEntityType: group
 bundle: elected_official
 mode: default
 content:
   field_summary:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -55,14 +57,6 @@ content:
             fi-def-at: false
     type: string
     region: content
-  label:
-    label: hidden
-    type: string
-    weight: 0
-    region: content
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
 hidden:
   changed: true
   created: true
@@ -75,4 +69,5 @@ hidden:
   field_official_title: true
   field_phone: true
   field_shortname_or_acronym: true
+  label: true
   uid: true
