POWR-426 Remove service mode title field from display Remove template that would never show the field

--- a/web/sites/default/config/core.entity_view_display.paragraph.service_mode.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.service_mode.default.yml
@@ -13,17 +13,9 @@ targetEntityType: paragraph
 bundle: service_mode
 mode: default
 content:
-  field_service_modes:
-    weight: 0
-    label: hidden
-    settings:
-      link: false
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_step_by_step_instructions:
     type: entity_reference_revisions_entity_view
-    weight: 2
+    weight: 0
     label: hidden
     settings:
       view_mode: default
@@ -31,4 +23,5 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_service_modes: true
   scheduled_publication: true
