POWR-426 Remove barrio node library

--- a/web/themes/custom/cloudy/cloudy.info.yml
+++ b/web/themes/custom/cloudy/cloudy.info.yml
@@ -10,6 +10,7 @@ libraries:
 libraries-override:
   bootstrap_barrio/global-styling: false
   bootstrap_barrio/file: false
+  bootstrap_barrio/node: false
 stylesheets-remove:
   - '@extlink/extlink.css'
 regions:
