POWR-316-1 Added list and menu blocks.

--- a/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-0.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - page_manager.page.taxonomy_term_page
+    - views.view.content_by_taxonomy
+    - views.view.content_by_taxonomy_menu
     - views.view.groups_by_topic
-    - views.view.services_by_topic
-    - views.view.services_by_topic_without_action
   module:
     - ctools
     - panels
@@ -27,28 +27,6 @@ variant_settings:
       weight: 2
       uuid: 79c44e9c-966f-4ff4-8843-5dd407698ee0
       context_mapping: {  }
-    f6176976-2383-47bd-8a19-da35dc1d613e:
-      id: 'views_block:services_by_topic-block_1'
-      label: ''
-      provider: views
-      label_display: visible
-      views_label: ''
-      items_per_page: none
-      region: content
-      weight: 0
-      uuid: f6176976-2383-47bd-8a19-da35dc1d613e
-      context_mapping: {  }
-    2fff8504-5649-4b36-9bda-2f3d730be700:
-      id: 'views_block:services_by_topic_without_action-block_1'
-      label: ''
-      provider: views
-      label_display: visible
-      views_label: ''
-      items_per_page: none
-      region: content
-      weight: 1
-      uuid: 2fff8504-5649-4b36-9bda-2f3d730be700
-      context_mapping: {  }
     06bc7bad-b281-404d-b7b1-a682216fb40b:
       id: 'entity_view:taxonomy_term'
       label: 'Entity view (Taxonomy term)'
@@ -56,10 +34,32 @@ variant_settings:
       label_display: '0'
       view_mode: default
       region: content
-      weight: 0
+      weight: -1
       uuid: 06bc7bad-b281-404d-b7b1-a682216fb40b
       context_mapping:
         entity: taxonomy_term
+    2e783413-c143-4f8a-a4c5-b8a85cc672b8:
+      id: 'views_block:content_by_taxonomy-block_1'
+      label: ''
+      provider: views
+      label_display: '0'
+      views_label: ''
+      items_per_page: none
+      region: content
+      weight: 1
+      uuid: 2e783413-c143-4f8a-a4c5-b8a85cc672b8
+      context_mapping: {  }
+    a821ebc4-ea88-4e93-b021-a22a6a6c4aa0:
+      id: 'views_block:content_by_taxonomy_menu-block_1'
+      label: ''
+      provider: views
+      label_display: '0'
+      views_label: ''
+      items_per_page: none
+      region: content
+      weight: 0
+      uuid: a821ebc4-ea88-4e93-b021-a22a6a6c4aa0
+      context_mapping: {  }
   id: panels_variant
   uuid: 3cf0a205-d6ab-4233-ab72-a1166dbe4ff0
   label: null
