--- a/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-3.yml
+++ b/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-3.yml
@@ -4,9 +4,8 @@ status: true
 dependencies:
   config:
     - page_manager.page.taxonomy_term_page
+    - views.view.content_by_taxonomy
     - views.view.groups_by_audience
-    - views.view.services_by_topic
-    - views.view.services_by_topic_without_action
   module:
     - ctools
     - ctools_block
@@ -53,27 +52,16 @@ variant_settings:
       uuid: 237c9545-e57f-42d9-baac-7cdc13718381
       context_mapping:
         entity: taxonomy_term
-    9ae5f9f1-fb5e-412a-9757-09aef7220e62:
-      id: 'views_block:services_by_topic-block_1'
+    ad70be50-a2a1-41d3-b7ed-9fad65fa8b86:
+      id: 'views_block:content_by_taxonomy-block_1'
       label: ''
       provider: views
-      label_display: visible
+      label_display: '0'
       views_label: ''
       items_per_page: none
       region: content
-      weight: 0
-      uuid: 9ae5f9f1-fb5e-412a-9757-09aef7220e62
-      context_mapping: {  }
-    beccb412-26a0-42a6-9eb4-f4bdcca59868:
-      id: 'views_block:services_by_topic_without_action-block_1'
-      label: ''
-      provider: views
-      label_display: visible
-      views_label: ''
-      items_per_page: none
-      region: content
-      weight: 0
-      uuid: beccb412-26a0-42a6-9eb4-f4bdcca59868
+      weight: 1
+      uuid: ad70be50-a2a1-41d3-b7ed-9fad65fa8b86
       context_mapping: {  }
   id: panels_variant
   uuid: 96b5ad4a-b6d6-4df4-ad5a-9efa3c9e3022
