--- a/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-1.yml
+++ b/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-1.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - page_manager.page.taxonomy_term_page
-    - views.view.services_by_term
+    - views.view.content_by_taxonomy
   module:
     - ctools
     - ctools_block
@@ -15,17 +15,6 @@ label: 'Community actions'
 variant: panels_variant
 variant_settings:
   blocks:
-    70144791-7e89-4ab4-87af-6e1fe6815b5b:
-      id: 'views_block:services_by_term-block_1'
-      label: ''
-      provider: views
-      label_display: visible
-      views_label: ''
-      items_per_page: none
-      region: content
-      weight: 1
-      uuid: 70144791-7e89-4ab4-87af-6e1fe6815b5b
-      context_mapping: {  }
     1a8b59d5-7d73-443f-8e77-c8e13486b2b5:
       id: page_title_block
       label: 'Page title'
@@ -51,6 +40,17 @@ variant_settings:
       uuid: deac8ca8-eb5c-42e7-88d9-3633b80865b7
       context_mapping:
         entity: taxonomy_term
+    9ef852fe-339f-4169-aab1-cde64b49020f:
+      id: 'views_block:content_by_taxonomy-block_1'
+      label: ''
+      provider: views
+      label_display: '0'
+      views_label: ''
+      items_per_page: none
+      region: content
+      weight: 1
+      uuid: 9ef852fe-339f-4169-aab1-cde64b49020f
+      context_mapping: {  }
   id: panels_variant
   uuid: 4ecf9df4-e70b-4456-9a3f-83742747544f
   label: null
